tests/paczka1/small_fuzzy/61038683.err
Error in line 8: HPkt2tg S869 85,3
Error in line 11: HPkt2tg A495 52,5
